WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290838
[JSC]less than operator should call valueOf in JIT compiler
https://bugs.webkit.org/show_bug.cgi?id=290838
Summary
[JSC]less than operator should call valueOf in JIT compiler
GuY
Reported
2025-04-01 03:22:18 PDT
tested in the latest main branch: 678e1944c13ad5b3409988175a1f340118b35e94 (HEAD -> main) poc: let count = 0 class A { valueOf() { count++ } } const a = new A(); function test() { a < a; } for (let i = 0; i < 100; i++) { test(); } print(count) run argument: ./WebKitBuild/JSCOnly/Debug/bin/jsc --useConcurrentJIT=0 --forceWeakRandomSeed=1 --jitPolicyScale=0.001 test2.js expected output: 200 actual output: 2
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-04-08 03:23:12 PDT
<
rdar://problem/148813062
>
Brenden Forward
Comment 2
2025-05-16 12:46:57 PDT
Pull request:
https://github.com/webkit/webkit/pull/45506
EWS
Comment 3
2025-05-16 15:15:19 PDT
Committed
295032@main
(e936f3ef6404): <
https://commits.webkit.org/295032@main
> Reviewed commits have been landed. Closing PR #45506 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug