[JSC] Avoid folding compare operations in DFG involving objects https://bugs.webkit.org/show_bug.cgi?id=290838 rdar://problem/148813062

Reviewed by Yusuke Suzuki.

We were folding expressions like `a < a` into `false` in DFG even
for object types, which is incorrect in the case that the object
defines a custom `valueOf()` method.  Since `valueOf()` is not
checked by `==`, we can still fold those expressions.

* JSTests/stress/operator-valueof.js: Added.
(shouldBe):
(A.prototype.valueOf):
(A):
(lt):
(lte):
(gt):
(gte):
(eq):
(eqq):
* Source/JavaScriptCore/dfg/DFGAbstractInterpreterInlines.h:
(JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):

Canonical link: https://commits.webkit.org/295032@main